tdf#134971 Don't overwrite default styles when inserting doc

Seems code never really bothered not to touch default style
info, when inserting from file. Original commit is:

 Author: Sascha Ballach <sab@openoffice.org>
 Date:   Wed Feb 28 08:24:41 2001 +0000

    import of default styles added

Change-Id: Ibb639a585bedabdcc5987900ecca1e04f4bb593a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/99015
Tested-by: Jenkins
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>
(cherry picked from commit c84764e08da5e1c6202d300684baab0076d6b3ed)